# nexus_client

./: Cargo.toml  bbs.tape  bbs.webm
src/: app.rs  banner.rs  desktop_notifications.rs  global_prefs.rs  handler.rs  main.rs  model.rs  sound.rs  ui.rs
src/handlers/: auth.rs  chat.rs  forum.rs  mod.rs  navigation.rs  profile.rs
src/services/: chat.rs  image.rs  message.rs  mod.rs  profile.rs
src/state/: auth.rs  chat.rs  forum.rs  mod.rs  notification.rs  profile.rs  ui.rs
src/ui/: auth.rs  avatar.rs  banner.rs  banners.rs  chat.rs  forum.rs  forums.rs  main_menu.rs  mod.rs  popups.rs  profile.rs  settings.rs  time_format.rs
src/ui/backgrounds/: cybergrid.rs  cyberpunk.rs  fractalgrid.rs  geometry.rs  geometry2.rs  hackerglyphs.rs  matrixrain.rs  minimal.rs  mod.rs  neontunnel.rs  none.rs  plasmawave.rs  pulsecircuit.rs  wireframeearth.rs
src/ui/themes/: cybergrid.rs  cyberpunk.rs  fractalgrid.rs  geometry.rs  geometry2.rs  hackerglyphs.rs  matrixrain.rs  minimal.rs  mod.rs  neontunnel.rs  plasmawave.rs  pulsecircuit.rs  wireframeearth.rs
