[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
crossterm = "0.27.0"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
uuid = { version = "1.8", features = ["v4", "serde"] }