[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
crossterm = "0.27.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
figlet-rs = "0.1.5"
rodio = "0.17"
once_cell = "1.19"
base64 = "0.22.1"
ratatui-image = "8.0.1"
image = { version = "0.25.6", features = ["png", "jpeg", "gif"] }
regex = "1.11.1"
chrono = "0.4.41"
