[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
default = ["audio"]
audio = ["rodio"]

[dependencies]
common = { path = "../common" }
crossterm = "0.28"
ratatui = "0.29.0"
rand = "0.8.5"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
figlet-rs = "0.1"
once_cell = "1.19"
base64 = "0.22"
ratatui-image = { version = "1.0.5", features = ["crossterm"] }
image = { version = "0.25", features = ["png", "jpeg", "gif"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
emojis = "0.6"

# Optional rodio dependency, only included when the "audio" feature is enabled
rodio = { version = "0.19", optional = true }
